# system-monitor-qt

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  systeminfo.cpp  systeminfo.h
